packages/lustre-v6.6.103.3/test/should_fail/semantics/broken/def.lus
type 
  int4 = int^4;
  st = {x: int4 };
  
node def(a: bool) returns (b: st);
var
  c: st;
let
-- illustrating a dependance loop
  b.x[0] = c.x[0];
  b.x[1] = c.x[0];
  b.x[2] = c.x[0];
  b.x[3] = c.x[0];
  c.x[0] = b.x[0];
  c.x[1] = b.x[1];
  c.x[2] = b.x[2];
  c.x[3] = b.x[3];
tel
